<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_temp_unit_key"
        android:title="@string/pref_temperature_unit_title"
        android:summary="%s"
        android:entries="@array/pref_temperature_unit_labels"
        android:entryValues="@array/pref_temperature_unit_values"
        android:defaultValue="@string/celsius_value_name"></ListPreference>
    <ListPreference
        android:key="@string/pref_windspeed_unit_key"
        android:title="@string/pref_windspeed_unit_title"
        android:summary="%s"
        android:entries="@array/pref_windspeed_unit_labels"
        android:entryValues="@array/pref_windspeed_unit_values"
        android:defaultValue="@string/mph_label"></ListPreference>
    <CheckBoxPreference
        android:key="@string/pref_autocomplete_edittext"
        android:title="Show City Name Suggestion"
        android:summary="A suggestion of cities will be appeared while typing"
        android:defaultValue="true">
    </CheckBoxPreference>
</PreferenceScreen>